# engligen

./: .gitignore  README.md  estrutura_do_projeto.txt  pyproject.toml
data/: config.json
data/wordlists/: banco_curinga_geral.json  capitulo1.txt  unit01_thematic_words.json  used_words.json
src/engligen/: app.py  main.py
src/engligen/core/: crossword.py  word_search.py  wordsearch.py
src/engligen/rendering/: clue_generator.py  crossword_renderer.py  image_renderer.py  wordsearch_renderer.py
src/engligen/ui/: menu.py
