[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engligen"
version = "0.2.0"
description = "Gerador de exercícios de Inglês em formato de imagem."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pillow"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

# Gera o comando de terminal "engligen"
[project.scripts]
engligen = "engligen.main:run"

# Diz ao setuptools que o código está em src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
